--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 <head>
-<title>Counter-Memorial of The People's Republic of China</title>\
+<title>Counter-Memorial of The People's Republic of China</title>
 </head>
 <body>
+  <div class="header">
+    <img src="https://internationalcourtofjustice.github.io/china/header.png" width="100%">
+  </div>
+  
+    <div class="footer">
+    <img src="https://internationalcourtofjustice.github.io/china/footer.png" width="100%">
+  </div>
 </body>
 </html>
