--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <img src="https://internationalcourtofjustice.github.io/china/header.png" width="100%">
   </div>
   
-    <div class="footer">
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS449rN_tHWIRBh8GTpNLBabRdXIl2FJCjWK8LWfAxdy6Pd3VMbKQ5YcN_6MJ87udzytGGfK-x9aDTD/pub?embedded=true"></iframe>
+    
+  <div class="footer">
     <img src="https://internationalcourtofjustice.github.io/china/footer.png" width="100%">
   </div>
 </body>
