--- a/index.html
+++ b/index.html
@@ -12,5 +12,18 @@
   <div class="footer">
     <img src="https://internationalcourtofjustice.github.io/china/footer.png" width="100%">
   </div>
+  <style>
+    .header {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  
+    .footer {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+  </style>
 </body>
 </html>
