--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <img src="https://internationalcourtofjustice.github.io/china/header.png" width="100%">
   </div>
   
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS449rN_tHWIRBh8GTpNLBabRdXIl2FJCjWK8LWfAxdy6Pd3VMbKQ5YcN_6MJ87udzytGGfK-x9aDTD/pub?embedded=true"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS449rN_tHWIRBh8GTpNLBabRdXIl2FJCjWK8LWfAxdy6Pd3VMbKQ5YcN_6MJ87udzytGGfK-x9aDTD/pub?embedded=true" style="width: 100%;"></iframe>
     
   <div class="footer">
     <img src="https://internationalcourtofjustice.github.io/china/footer.png" width="100%">
   </div>
   <style>
+  
+  iframe {
+  position: relative;
+  top: 20%;
+  height: 50%;
+  border-width: 0px;
+  }
+  
     .header {
       position: absolute;
       top: 0;
@@ -21,6 +29,7 @@
   
     .footer {
       position: absolute;
+      top: 80%;
       bottom: 0;
       left: 0;
     }
