--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Remarks by President Xi Jinping at Leaders' Side Event on Safeguarding Planet of G20 Riyadh Summit</title>
+<title>Counter-Memorial of The People's Republic of China</title>
 <link type="text/css" href="../images/style.css" rel="stylesheet"/>
 <script type="text/javascript" src="../images/main.js"></script>
 </head>
