--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ if (sword=='Please enter keywords' || sword=="") {
       </ul>
     </div>
     
-<center><iframe src="https://docs.google.com/document/d/e/2PACX-1vS449rN_tHWIRBh8GTpNLBabRdXIl2FJCjWK8LWfAxdy6Pd3VMbKQ5YcN_6MJ87udzytGGfK-x9aDTD/pub?embedded=true"style="width:60%;margin-left:0vw;height:100vw;border-width:0px;"></iframe></center>
+<center><iframe src="https://docs.google.com/document/d/e/2PACX-1vS449rN_tHWIRBh8GTpNLBabRdXIl2FJCjWK8LWfAxdy6Pd3VMbKQ5YcN_6MJ87udzytGGfK-x9aDTD/pub?embedded=true"style="width:60%;height:120vw;border-width:0px;"></iframe></center>
 
 <style type="text/css">
 .content{padding-top:10px;}
