--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ if (sword=='Please enter keywords' || sword=="") {
 .copyright{ color:#999999;line-height:24px; text-align:center;border:none; padding:0;}
 </style>
 <div class="footer">
-        <div class="copyright">Copyright©1998-2014, Ministry of Foreign Affairs, the People's Republic of China<br />Contact us Address: No. 2, Chaoyangmen Nandajie, Chaoyang District, Beijing, 100701 Tel: 86-10-65961114<br>this website was created by Jack Botein, for the sole purpose of a 501(c)(3) educational activity, Yale Model United Nations XLVII</div> 
+        <div class="copyright">Copyright©1998-2014, Ministry of Foreign Affairs, the People's Republic of China<br />Contact us Address: No. 2, Chaoyangmen Nandajie, Chaoyang District, Beijing, 100701 Tel: 86-10-65961114<br>this website was adapted by Jack Botein, for the sole purpose of a 501(c)(3) educational activity, Yale Model United Nations XLVII</div> 
 <div style="text-align:center; padding:5px 0; ">
 		<a href="http://bszs.conac.cn/sitename?method=show&id=07287F0D6EDF0310E053022819AC647D" target="_blank"><img src="https://www.fmprc.gov.cn/mfa_eng/images/P020180901587211901157.png"/></a>
 		</div> 
